fix spacing

--- a/src/scripts/blocks/Amenities/Amenities.scss
+++ b/src/scripts/blocks/Amenities/Amenities.scss
@@ -28,7 +28,7 @@
 
         .content-wrapper {
             padding-left: fn.toVw(104);
-            padding-right: fn.toVw(109);
+            padding-right: fn.toVw(109 - 20);
             display: flex;
             width: 100%;
             flex-direction: column;
@@ -66,7 +66,7 @@
             }
 
             .content-description {
-                padding-top: fn.toVw(24);
+                padding: fn.toVw(24) 0 fn.toVw(53);
 
                 p {
                     color: clr.$white;
